# EvansEngine

./: CMakeLists.txt  README.md  main.cpp
Core/: game.cpp  game.hpp  gem.cpp  gem.hpp  loadTextures.cpp  loadTextures.hpp
Core/Entities/: enemy.cpp  enemy.hpp  player.cpp  player.hpp
Core/Entities/Animation/: animation.cpp  animation.hpp
